Добавлен раздел "избранные товары"

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -145,6 +145,18 @@ img {
   }
 }
 
+.fav {
+  @extend .cart;
+  
+  &:has(> .favCounter:empty) {
+    display: none;
+  }
+}
+
+.favCounter {
+  @extend .cartCounter;
+}
+
 .hide {
   display: none !important;
 }
