--- a/src/modules/hints/_hints.scss
+++ b/src/modules/hints/_hints.scss
@@ -1,31 +1,15 @@
 .hints {
-	display: flex;
-	align-items: center;
-	height: 36px;
+	line-height: 36px;
 	max-width: 900px;
 	margin: 0 auto;
 	padding: 0 10px;
-
-	&__box {
-		margin: 0 4px;
-		font-weight: 550;
-		font-size: 18px;
-	}
+	font-weight: 550;
 
 	&__hint {
-		margin: 0;
+		margin: 0 3px 0 8px;
 		padding: 4px 6px 8px;
-		background-color: #F6F6FA;
 		text-decoration: none;
 		border-radius: 8px;
-		font-weight: 550;
-	}
-}
-
-/* -DEV- FOR DEMONSTRATION */
-.hints {
-
-	&__hint {
 		position: relative;
 		background: linear-gradient(92.97deg, #DA15B8 4.93%, #8D06CC 100%);
 		-webkit-background-clip: text;
@@ -44,6 +28,12 @@
 		border-radius: 8px;
 		z-index: -1;
 	}
-}
 
-/* FOR DEMONSTRATION -/DEV- */
+	&__hint:last-child {
+		margin-right: 0;
+	}
+
+	&__hint:nth-last-child(2) {
+		margin-right: 8px;
+	}
+}
